<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/passwordImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/header">

        <TextView
            android:id="@+id/passheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="#F39C12"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            android:visibility="visible"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:text="@string/password_login_txt"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:onClick="goLogin"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="330dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp">

        <EditText
            android:id="@+id/setcode"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:textColor="@android:color/holo_green_dark"
            android:hint="@string/password_hint_text"
            android:fontFamily=""
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmcode"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:textColor="@android:color/holo_green_dark"
            android:hint="@string/password_hint_text2"
            android:fontFamily=""
            android:inputType="textPassword" />

        <Button
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="210dp"
            android:text="@string/password_btn_text"
            android:onClick="setPassword"
            android:background="@drawable/updatebutton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_info_txt"
            android:layout_marginTop="280dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center_horizontal"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>