<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/otpImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/header">

        <TextView
            android:id="@+id/otpheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="#F39C12"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            android:visibility="visible"
            />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="8dp">

        <EditText
            android:id="@+id/setemail"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:textColor="@android:color/holo_green_dark"
            android:hint="@string/otp_email_hint_text"
            android:fontFamily=""
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/sndbtn"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:text="@string/otp_send_btn_text"
            android:textColor="@android:color/white"
            android:onClick="sendOtp"
            android:background="@drawable/selectbutton"/>


        <EditText
            android:id="@+id/setotp"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="230dp"
            android:ems="10"
            android:textColor="@android:color/holo_green_dark"
            android:hint="@string/otp_otp_hint_text"
            android:maxLength="6"
            android:fontFamily=""
            android:inputType="number"
            android:enabled="false"/>

        <Button
            android:id="@+id/chkbtn"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="310dp"
            android:text="@string/otp_check_btn_text"
            android:textColor="@android:color/white"
            android:onClick="checkOtp"
            android:background="@drawable/selectbutton"
            android:enabled="false"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>