<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:id="@+id/insert">

    <ImageView
        android:id="@+id/insertImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

        <RelativeLayout
            android:layout_height="80sp"
            android:layout_width="280sp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertlog_date_text"
            android:textSize="18sp"
            />

            <Spinner
                android:id="@+id/dateDropDown"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/spinner"
                />

            <TextView
                android:id="@+id/slash"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="/"
                android:layout_marginStart="85dp"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                />

            <Spinner
                android:id="@+id/monthDropDown"
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:layout_marginStart="112dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/spinner"
                />

            <TextView
                android:id="@+id/slash2"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="/"
                android:layout_marginStart="202dp"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/yearText"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginStart="222dp"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                />

        </RelativeLayout>

    <EditText
        android:id="@+id/subjectText"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/insertlog_subject_text"
        android:inputType="text" />


    <EditText
        android:id="@+id/eventText"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/insertlog_event_text"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <ImageButton
        android:id="@+id/favorite"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="470dp"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/favorite"
        android:onClick="fav"
        android:visibility="visible"
        tools:src="@drawable/favorite" />

    <Button
        android:id="@+id/insertLogBtn"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:textColor="@android:color/white"
        android:background="@drawable/selectbutton"
        android:onClick="validateInput"
        android:text="@string/insertlog_btn_text" />

</RelativeLayout>