<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/seeLog">

    <ImageView
        android:id="@+id/showImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/header">

    <TextView
        android:id="@+id/showLogHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:textColor="#F39C12"
        android:textStyle="italic|bold"
        android:textSize="28sp"
        android:visibility="visible"
        />
    </RelativeLayout>

    <RelativeLayout
        android:layout_height="50sp"
        android:layout_width="250sp"
        android:layout_marginTop="110sp"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/yearDropDown"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/spinner"
            />

        <Spinner
            android:id="@+id/dateDropDown"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="130sp"
            android:textAlignment="center"
            android:background="@drawable/spinner"/>

    </RelativeLayout>

    <Button
        android:id="@+id/selectLogBtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textColor="@android:color/white"
        android:background="@drawable/selectbutton"
        android:onClick="watchEvent"
        android:text="@string/showlog_watchevent_btn_text" />

    <TextView
        android:id="@+id/subjectLabel"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:text="@string/insertlog_subject_text"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="247dp"
        android:textColor="@android:color/white"
        android:background="@drawable/textviewdesign"
        android:scrollbars = "horizontal"
        android:ems="10"/>

    <ImageView
        android:id="@+id/fav"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/favorite"/>

    <TextView
        android:id="@+id/eventLabel"
        android:layout_width="318dp"
        android:layout_height="270dp"
        android:text="@string/insertlog_event_text"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:padding="10dp"
        android:scrollbars = "horizontal|vertical"
        android:background="@drawable/textviewdesign"
        />
</RelativeLayout>