<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/menuLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/menuImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/header">

        <TextView
            android:id="@+id/menuHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:textColor="#F39C12"
            android:textStyle="italic|bold"
            android:textSize="28sp"
            android:visibility="visible"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">

    <GridLayout
        android:id="@+id/menuRecyclerView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:columnCount="2">

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="10dp"
            android:layout_marginStart="23sp"
            android:elevation="23dp"
            android:onClick="insertLog">

            <ImageButton
                android:id="@+id/insertLogBtn"
                android:layout_width="60dp"
                android:layout_height="66dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:cropToPadding="true"
                android:onClick="insertLog"
                android:background="@drawable/loginview"
                android:scaleType="fitCenter"
                android:src="@drawable/insertlog"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="98dp"
                android:layout_height="30dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="100dp"
                android:text="@string/menu_insert_log_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="insertLog"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="10dp"
            android:layout_marginStart="45dp"
            android:elevation="23dp"
            android:onClick="showLog">

            <ImageButton
                android:id="@+id/showLogBtn"
                android:layout_width="60dp"
                android:layout_height="66dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginview"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:onClick="showLog"
                android:src="@drawable/showlog"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="98dp"
                android:layout_height="30dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="100dp"
                android:text="@string/menu_show_log_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="showLog"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="40dp"
            android:layout_marginStart="23sp"
            android:elevation="23dp"
            android:onClick="dailyActivity">

            <ImageButton
                android:id="@+id/dailyActivityBtn"
                android:layout_width="60dp"
                android:layout_height="66dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginview"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:onClick="dailyActivity"
                android:src="@drawable/dailyactivity"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="124dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="100dp"
                android:text="@string/menu_daily_activity_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="dailyActivity"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="40dp"
            android:layout_marginStart="45dp"
            android:elevation="23dp"
            android:onClick="sweetMemories">

            <ImageButton
                android:id="@+id/sweetMemoriesBtn"
                android:layout_width="70dp"
                android:layout_height="76dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="19dp"
                android:adjustViewBounds="false"
                android:background="@drawable/loginview"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:onClick="sweetMemories"
                android:src="@drawable/sweetmemories"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="83dp"
                android:layout_height="50dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="83dp"
                android:text="@string/menu_sweet_memories_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="sweetMemories"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="40dp"
            android:layout_marginStart="23sp"
            android:elevation="23dp"
            android:onClick="updateLog">

            <ImageButton
                android:id="@+id/updateLogBtn"
                android:layout_width="70dp"
                android:layout_height="76dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginview"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:onClick="updateLog"
                android:src="@drawable/updatelog"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="100dp"
                android:text="@string/menu_update_log_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="updateLog"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="40dp"
            android:layout_marginStart="45dp"
            android:elevation="23dp"
            android:onClick="updateDailyActivity">

            <ImageButton
                android:id="@+id/updateDailyActivityBtn"
                android:layout_width="60dp"
                android:layout_height="66dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:background="@drawable/loginview"
                android:cropToPadding="false"
                android:onClick="updateDailyActivity"
                android:scaleType="fitCenter"
                android:src="@drawable/updatedailyactivity"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="83dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="83dp"
                android:text="@string/menu_update_dactivity_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="updateDailyActivity"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="40dp"
            android:layout_marginStart="23sp"
            android:elevation="23dp"
            android:onClick="notes">

            <ImageButton
                android:id="@+id/NotesBtn"
                android:layout_width="70dp"
                android:layout_height="76dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:background="@drawable/loginview"
                android:cropToPadding="false"
                android:onClick="notes"
                android:scaleType="fitCenter"
                android:src="@drawable/notes"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="52dp"
                android:layout_height="50dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="100dp"
                android:text="@string/menu_notes_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="notes"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="40dp"
            android:layout_marginStart="45dp"
            android:elevation="23dp"
            android:onClick="impdates">

            <ImageButton
                android:id="@+id/ImpDatesBtn"
                android:layout_width="70dp"
                android:layout_height="76dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:background="@drawable/loginview"
                android:cropToPadding="false"
                android:onClick="impdates"
                android:scaleType="fitCenter"
                android:src="@drawable/impdates"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="88dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="100dp"
                android:text="@string/menu_imp_dates_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="impdates"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="40dp"
            android:layout_marginStart="23sp"
            android:elevation="23dp"
            android:onClick="showImage">

            <ImageButton
                android:id="@+id/ShowImageBtn"
                android:layout_width="60dp"
                android:layout_height="66dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:background="@drawable/loginview"
                android:cropToPadding="false"
                android:onClick="showImage"
                android:scaleType="fitCenter"
                android:src="@drawable/galary"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="155dp"
                android:layout_height="50dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="92dp"
                android:text="@string/menu_show_images_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="showImage"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/loginview"
            android:layout_marginTop="40dp"
            android:layout_marginStart="45dp"
            android:elevation="23dp"
            android:onClick="dbcontrols">

            <ImageButton
                android:id="@+id/DBControlBtn"
                android:layout_width="60dp"
                android:layout_height="66dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:background="@drawable/loginview"
                android:cropToPadding="false"
                android:onClick="dbcontrols"
                android:scaleType="fitCenter"
                android:src="@drawable/db"
                android:visibility="visible" />

            <TextView
                android:id="@+id/text10"
                android:layout_width="155dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="92dp"
                android:text="@string/menu_db_controls_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="dbcontrols"
                />
        </RelativeLayout>
    </GridLayout>
    </ScrollView>
</RelativeLayout>
